--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Radzivil</title>
+  <title>GenFarm</title>
   <link rel="stylesheet" href="./assets/css/style.min.css">
 </head>
 <body class="page">
   <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href=""><img class="logo-img" src="./assets/images/logo.svg" alt="Logo"></a>
+        <ul class="header__nav list-reset">
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Home</a></li>
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Product</a></li>
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Shop</a></li>
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Contact</a></li>
+        </ul>
+        <button class="header__btn btn-reset">Get started</button>
+      </div>
+    </div>
   </header>
   <footer class="footer">
 
