--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,29 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="promo">
+      <div class="container">
+        <div class="promo__inner">
+          <img class="promo__hero-img" src="./assets/images/hero.webp" alt="farm">
+          <div class="promo__title-box">
+            <h2 class="promo__subtitle">NEXT GENERATION</h2>
+            <h1 class="promo__title"><span class="promo__title_large">Bo<span class="promo__title_decor">ost</span></span><br> Nature profits</h1>
+          </div>
+          <div class="promo__content">
+            <p class="promo__text">
+              There has been a movement afoot in recent years to make 
+              connections between what we eat, how we live and the planet.
+            </p>
+            <div class="promo__social">
+              <a class="promo__social-link" href="">Facebook</a>
+              <a class="promo__social-link" href="">Instagram</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer class="footer">
 
   </footer>
