feat: add advantages section

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,53 @@
         </div>
       </div>
     </section>
+    <section class="advantages">
+      <div class="container">
+        <div class="advantages__inner">
+          <h2 class="advantages__title">Agriculture farm ecology products</h2>
+          <div class="advantages__content">
+            <p class="advantages__text">
+              Farmers Weekly is the leading multimedia information service for farmers and agricultural businesses. It provide news, market prices, technical advice.
+            </p>
+            <p class="advantages__text">
+              There has been a movement afoot in recent years to make connections between what we eat, how we live and the planet. Modern Farmer exists for people who want to be a part of that movement.
+            </p>
+            <div class="advantages__items">
+              <figure class="advantages__item">
+                <img class="advantages__item-img" src="./assets/images/advantages/product.svg" alt="product">
+                <figcaption class="advantages__item-title">
+                  Agricultural Products
+                </figcaption>
+              </figure>
+              <figure class="advantages__item">
+                <img class="advantages__item-img" src="./assets/images/advantages/cow.svg" alt="cow">
+                <figcaption class="advantages__item-title">
+                  Different Lifeforms
+                </figcaption>
+              </figure>
+              <figure class="advantages__item">
+                <img class="advantages__item-img" src="./assets/images/advantages/tractor.svg" alt="tractor">
+                <figcaption class="advantages__item-title">
+                  Modern Technologies
+                </figcaption>
+              </figure>
+              <figure class="advantages__item">
+                <img class="advantages__item-img" src="./assets/images/advantages/vegetables.svg" alt="vegetables">
+                <figcaption class="advantages__item-title">
+                  Fresh Vegetables
+                </figcaption>
+              </figure>
+              <figure class="advantages__item">
+                <img class="advantages__item-img" src="./assets/images/advantages/warehouse.svg" alt="warehouse">
+                <figcaption class="advantages__item-title">
+                  Heavy Warehouse
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
 
