feat: add deal section

--- a/src/index.html
+++ b/src/index.html
@@ -91,9 +91,53 @@
         </div>
       </div>
     </section>
+    <section class="deal">
+      <div class="container">
+        <h2 class="deal__title">Deal Awesome Harvest of <span class="deal__title_accent">products</span></h2>
+        <div class="deal__images">
+          <img class="deal__img deal__img_first" src="./assets/images/deal/1.webp" alt="image">
+          <div class="deal__images-inner">
+            <img class="deal__img" src="./assets/images/deal/2.webp" alt="image">
+            <img class="deal__img" src="./assets/images/deal/3.webp" alt="image">
+          </div>
+          <img class="deal__img deal__img_last" src="./assets/images/deal/4.webp" alt="image">
+        </div>
+        <div class="counter">
+          <div class="counter__item">
+            <h4 class="counter__item-title">
+              Our Satisfied Customers
+            </h4>
+            <p class="counter__item-content counter__item-content_accent">
+              2m+
+            </p>
+          </div>
+          <div class="counter__item">
+            <h4 class="counter__item-title">
+              Our Satisfied Customers
+            </h4>
+            <p class="counter__item-content">
+              16k
+            </p>
+          </div>
+          <div class="counter__item">
+            <h4 class="counter__item-title">
+              Our Satisfied Customers
+            </h4>
+            <p class="counter__item-content">
+              05+
+            </p>
+          </div>
+          <h2 class="counter__title">We are the best farm in here</h2>
+        </div>
+        <div class="deal__wrapper">
+          <img class="deal__img" src="./assets/images/deal/5.webp" alt="image">
+          <img class="deal__img" src="./assets/images/deal/6.webp" alt="image">
+        </div>
+      </div>
+
+    </section>
   </main>
   <footer class="footer">
-
   </footer>
   <script src="./assets/js/main.min.js"></script>
 </body>
