feat: add seed section

--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,31 @@
       </div>
 
     </section>
+    <section class="seed">
+      <div class="container">
+        <div class="seed__inner">
+          <div class="seed__text-box">
+            <p class="seed__subtitle">the seeds</p>
+            <h2 class="seed__title">
+              sEEDS of agries WAs THe IDEA to IMPROVE this much special.
+            </h2>
+            <button class="btn-reset seed__btn">read more</button>
+          </div>
+          <div class="seed__content">
+            <img class="seed__img" src="./assets/images/seed-hero.webp" alt="images">
+            <div class="seed__content-inner">
+              <img class="seed__content-img" src="./assets/images/number.svg" alt="01">
+              <p class="seed__content-text">
+                Farmers Weekly is the leading multimedia information service for farmers and agricultural businesses. 
+                It provide news, market prices, technical advice, opinion and a range of vital interactive services for farm business.
+                <br><br>
+                Purdue Agriculture is a leader in innovative learning, discovery and engagement in agriculture, food and natural resources.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
   </footer>
