feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -163,6 +163,43 @@
     </section>
   </main>
   <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__content">
+          <h5 class="footer__subtitle">Ready to</h5>
+          <h2 class="footer__title">get started?</h2>
+          <p class="footer__text">I hope it works well for you and providing awesome projects to your customers and clients as..</p>
+          <form class="footer__form">
+            <input class="footer__form-input" required type="email" placeholder="Email Address">
+            <button class="btn-reset footer__form-btn">Join Now</button>
+          </form>
+        </div>
+        <div class="footer__contacts">
+          <div class="footer__contacts-item">
+            <h4 class="footer__contacts-title">Phone</h4>
+            <a href="tel:+253625461236" class="footer__contacts-phone">+2536    2546     1236</a>
+          </div>
+          <div class="footer__contacts-item">
+            <h4 class="footer__contacts-title">Address</h4>
+            <address class="footer__contacts-address">
+              7541 Washington Ave
+              Manchester Kentucky
+            </address>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <nav class="footer__nav">
+        <a class="logo" href=""><img class="logo-img" src="./assets/images/footer-logo.svg" alt="Logo"></a>
+        <ul class="footer__nav-list list-reset">
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#">Home</a></li>
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#">Product</a></li>
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#">Shop</a></li>
+          <li class="footer__nav-item"><a class="footer__nav-link" href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </footer>
   <script src="./assets/js/main.min.js"></script>
 </body>
